# io7app

./: .env.example  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  USER_GUIDE.md  pyproject.toml
docs/superpowers/plans/: 2026-05-04-io7app-implementation.md
docs/superpowers/specs/: 2026-05-04-io7app-design.md
examples/: 01_switch_lamp.py  02_thermostat_valve.py  03_lux_auto_lamp.py  04_scheduled_inject.py  05_wildcard_trace.py
io7app/: __init__.py  app.py  router.py  scheduler.py
scripts/: services.sh
tests/: conftest.py  test_app.py  test_examples.py  test_router.py  test_scheduler.py
