[project]
name = "io7app"
version = "0.1.0"
description = "Python app-server framework for the io7 IoT platform"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Yoonseok Hur" }]
dependencies = [
  "paho-mqtt>=1.6,<3.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
cron = ["croniter>=2.0"]
dev  = ["pytest>=8.0", "pytest-timeout>=2.3", "croniter>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["io7app"]

[tool.pytest.ini_options]
addopts = "-q --timeout=10"
testpaths = ["tests"]
